native v2: remove API-33 String.isBlank dependency